# candle-vllm

./: .dockerignore  .example.env  .gitignore  .test.env  .typos.toml  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  COVERAGE.md  Cargo.toml  Dockerfile  HANGING_REQUESTS_DIAGNOSIS.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PLAN.md  LIBRARY_API.md  MIGRATION_COMPLETE.md  PIPELINE_AUDIT.md  PROMETHEUS_PARKING_LOT_REQUIREMENTS.md  QUICKSTART_TOOL_STREAMING.md  QUICK_REFERENCE.md  README-CN.md  README.md  STREAMING_AUDIT_SUMMARY.md  SUMMARY.md  TESTING.md  TOOL_CALL_STREAMING_IMPL.md  TOOL_CALL_STREAMING_SPEC.md  build.rs  build_docker.sh  docker-compose.yaml  example.models.yaml  install.txt  install_metal_toolchain.sh  mcp.json  models-fixed.yaml  models-minimal.yaml  models-optimized.yaml  models.yaml  run_ministral_3b.sh  setup.py  (+3 more)
.claude/: settings.local.json
.devcontainer/: devcontainer.json
crates/candle-vllm-core/: Cargo.toml  README.md
crates/candle-vllm-core/src/: api.rs  config.rs  engine_builder_ext.rs  engine_params.rs  engine_state.rs  lib.rs  models_config.rs  models_engine_builder.rs  vision.rs
crates/candle-vllm-core/src/backend/: cache.rs  gguf.rs  gptq.rs  heartbeat.rs  progress.rs
crates/candle-vllm-core/src/backend/custom_ops/: mod.rs  moe.rs  sort.rs
crates/candle-vllm-core/src/openai/: chunk_collector.rs  distributed.rs  image_tool.rs  local_vision_tool.rs  logits_processor.rs  mod.rs  openai_server.rs  openai_server.rs.old  requests.rs  responses.rs  sampling_params.rs  streaming.rs  tool_parser.rs  tool_streaming.rs  utils.rs  vision_proxy.rs
crates/candle-vllm-core/src/openai/conversation/: default_conversation.rs  mod.rs
crates/candle-vllm-core/src/openai/models/: deepseek.rs  gemma.rs  glm4.rs  linear.rs  llama.rs  mistral.rs  mod.rs  phi3.rs  quantized_llama.rs  quantized_qwen3_moe.rs  qwen.rs  qwen3_moe.rs  yi.rs
crates/candle-vllm-core/src/openai/models/layers/: attention.rs  mask.rs  mlp.rs  mod.rs  moe.rs  qrmsnorm.rs  quantized_var_builder.rs  rotary_emb.rs
crates/candle-vllm-core/src/openai/pipelines/: llm_engine.rs  llm_engine.rs.old  llm_engine_v2.rs  mod.rs  pipeline.rs  work_item.rs  worker.rs
crates/candle-vllm-core/src/paged_attention/: attn_bias.rs  input_metadata.rs  mod.rs  utils.rs
crates/candle-vllm-core/src/parking_lot/: executor.rs  job.rs  mod.rs  resource_adapter.rs  streaming_registry.rs  tests.rs  types.rs  worker_pool.rs
crates/candle-vllm-core/src/parking_lot/tests/: executor_comprehensive_tests.rs  helpers.rs  job_tests.rs  mocks.rs  mod.rs  resource_adapter_tests.rs  serialization_tests.rs  streaming_registry_tests.rs  worker_pool_comprehensive.rs  worker_pool_tests.rs
crates/candle-vllm-core/src/prompt_cache/: config.rs  manager.rs  mod.rs  storage.rs
crates/candle-vllm-core/src/prompt_cache/backends/: memory.rs  mod.rs  redis_backend.rs  sled_backend.rs
crates/candle-vllm-core/src/prompt_cache/tests/: inference_integration_tests.rs  integration_tests.rs  manager_tests.rs  mod.rs  standalone_tests.rs  storage_tests.rs
crates/candle-vllm-core/src/scheduler/: block_engine.rs  cache_engine.rs  sequence.rs
crates/candle-vllm-core/tests/: integration_test.rs  test_utils.rs
crates/candle-vllm-core/tests/test_helpers/: assertions.rs  mock_executor.rs  mock_models.rs  mock_tensors.rs  mod.rs  test_config.rs
crates/candle-vllm-openai/: Cargo.toml  README.md
crates/candle-vllm-openai/src/: adapter.rs  lib.rs  model_registry.rs  streaming.rs
crates/candle-vllm-openai/src/conversation/: default_conversation.rs  mod.rs
crates/candle-vllm-openai/src/tool_calling/: mod.rs  parser.rs
crates/candle-vllm-openai/tests/: integration_test.rs
crates/candle-vllm-responses/: Cargo.toml  README.md
crates/candle-vllm-responses/src/: lib.rs  mcp_client.rs  orchestrator.rs  session.rs  status.rs
crates/candle-vllm-responses/tests/: integration_test.rs
crates/candle-vllm-server/: Cargo.toml  README.md
crates/candle-vllm-server/src/: http_responses.rs  lib.rs  main.rs  models_config.rs  routes.rs
crates/candle-vllm-server/src/config/: mcp.rs  mod.rs  models.rs  parking_lot_merge.rs  scheduler.rs  validation.rs
crates/candle-vllm-server/src/state/: backend_traits.rs  mailbox_service.rs  mod.rs  model_manager.rs  queue_backends.rs  queue_service.rs  request_queue.rs  webhook_service.rs
crates/candle-vllm-server/src/state/backends/: memory.rs  mod.rs  postgres.rs  sqlite.rs  surreal.rs
crates/candle-vllm-server/tests/: integration_test.rs  mcp_integration_test.rs  prompt_cache_integration_test.rs  worker_pool_integration_test.rs
csrc/: cache.h  cache_kernels.cu  cuda_utils.h  ops.h  pos_encoding_kernels.cu  rustbind.cpp  test.py
docs/: CONFIGURATION.md  PARKING_LOT_FINAL_MIGRATION.md  PARKING_LOT_REFACTOR.md  PARKING_LOT_SCHEDULER.md  PROMPT_CACHE_TESTING.md  REMAINDER.md  RMCP_ISSUE_ANALYSIS.md  SDK.md  TESTING_ARCHITECTURE.md  THREAD_POOL_FIX.md  embedding.md  goose.md  kilocode.md  mcp_tool_calling.md  multimodal.md  opencode.md  prefix_cache.md  rust_crate.md  tool_parsing.md  xbot.md
examples/: benchmark.py  chat.py  chat_stream.rs  convert_awq_marlin.py  convert_marlin.py  llama.py  run_ministral_3b.sh  scheduler-config.json  simple_embed.rs  simple_gen.rs  test_tool.sh
examples/agent_framework/: Cargo.toml  README.md
examples/agent_framework/src/: main.rs
examples/ai_gateway/: Cargo.toml  README.md
examples/ai_gateway/src/: main.rs
examples/tauri_app/: Cargo.toml  README.md
examples/tauri_app/src/: main.rs
kernels/: Cargo.toml  attention_kernel.cu  build.rs  copy_blocks_kernel.cu  rotary_embedding_kernel.cu
kernels/src/: copy_blocks_kernel.cu  ffi.rs  gptq_cuda_kernel.cu  lib.rs  marlin_cuda_kernel.cu  marlin_cuda_kernel.cuh  marlin_gptq_cuda_kernel.cuh  marlin_matmul_awq_bf16.cu  marlin_matmul_awq_f16.cu  marlin_matmul_bf16.cu  marlin_matmul_f16.cu  marlin_repack.cu  pagedattention.cu  reshape_and_cache_kernel.cu  rotary_embedding_kernel.cu  sort.cu
kernels/src/marlin/: marlin.cuh  marlin_dtypes.cuh
metal-kernels/: Cargo.toml
metal-kernels/src/: lib.rs  utils.rs
(+188 files in other folders)
