[package]
name = "candle-vllm"
version = "0.4.15"
edition = "2021"
default-run = "candle-vllm"

[lib]
name = "candle_vllm"
path = "src/lib.rs"

[[bin]]
name = "candle-vllm"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7.4", features = ["tokio"] }
utoipa = { version = "4.2", features = ["axum_extras"] }
tower-http = { version = "0.6.6", features = ["cors"]}
flume = "0.10.14"
#actix-web = "4.8.0"
anyhow = "1.0.75"
rand = "0.9.0"
rayon="1.10.0"
hyper = { version = "0.14", features = ["full"] }
candle-core = { git = "https://github.com/guoqingbao/candle.git", version = "0.8.3", rev = "dfa48cd" }
candle-nn = { git = "https://github.com/guoqingbao/candle.git", version = "0.8.3", rev = "dfa48cd" }
dyn-fmt = "0.4.0"
serde = { version = "1.0.190", features = ["serde_derive"] }
tokenizers = "0.21.2"
uuid = { version = "1.5.0", features = ["v4"] }
hf-hub = "0.4.1"
serde_json = "1.0.108"
derive_more = "0.99.17"
accelerate-src = { version = "0.3.2", optional = true }
intel-mkl-src = { version = "0.8.1", features = ["mkl-static-lp64-iomp"], optional = true }
half = { version = "2.5.0", features = ["num-traits", "use-intrinsics", "rand_distr"] }
clap = { version = "4.4.7", features = ["derive"] }
futures = "0.3.29"
tokio = { version = "1.38.0", features = ["sync"] }
env_logger = "0.10.1"
tracing = "0.1.40"
range-checked = { git = "https://github.com/EricLBuehler/range-checked.git", version = "0.1.0" }
either = { version = "1.13.0", features = ["serde"] }
dirs = "5.0.1"
minijinja = { version = "2.10.2", features = ["builtins", "json"] }
minijinja-contrib = { version = "2.10.2", features = ["pycompat"] }
thiserror = "1.0.58"
attention-rs = { git = "https://github.com/guoqingbao/attention.rs.git", version="0.2.2", rev = "66ba9a4" }
metal = { version = "0.27.0", features = ["mps"], optional = true }
lazy_static = {version = "1.4.0"}
interprocess = "2.2.2"
serde-big-array = "0.5.1"
bincode = { version = "1.3.1" }
ftail = "0.2"
tqdm = "0.8.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
indicatif = "0.17.11"
mpi = { version = "0.8.0", optional = true}
parking_lot = "0.12"
akin = "0.4.0"
itertools = "0.13.0"
chrono = "0.4.41"
which = "8.0.0"
ahash = "0.8.11"
rustchatui = { git = "https://github.com/guoqingbao/rustchatui.git", rev="68caad9" }
base64 = "0.22.1"
bytes = "1.5"
reqwest = { version = "0.12.24", features = ["blocking", "json", "rustls-tls"]}
regex = "1.12.2"
crossbeam = "0.8.4"
colored = { version = "3.0.0" }
local-ip-address = "0.6.5"

[features]
accelerate = ["dep:accelerate-src", "candle-core/accelerate", "candle-nn/accelerate"]
cuda = ["candle-core/cuda", "candle-nn/cuda", "attention-rs/cuda"]
metal = ["candle-core/metal", "candle-nn/metal", "dep:metal", "attention-rs/metal"]
cudnn = ["candle-core/cudnn"]
flash-attn = ["cuda", "attention-rs/flash-attn"]
flash-decoding = ["attention-rs/flash-decoding"]
mkl = ["dep:intel-mkl-src", "candle-core/mkl", "candle-nn/mkl"]
nccl = ["candle-core/nccl"]
mpi = ["candle-core/nccl", "dep:mpi"]
graph = ["attention-rs/graph", "candle-core/graph"]
