[package]
name = "kernels"
version = "0.1.0"
edition = "2021"
description = "Paged attention kernels for candle-vllm"
categories = ["science"]
license = "MIT OR Apache-2.0"

[dependencies]

[build-dependencies]
bindgen_cuda = {git = "https://github.com/guoqingbao/bindgen_cuda.git", version= "0.1.6"}
anyhow = { version = "1", features = ["backtrace"] }
