[package]
name = "candle-vllm-responses"
version = "0.4.5"
edition = "2021"
license = "MIT"
description = "Responses API with MCP integration for candle-vllm"

[dependencies]
candle-vllm-core = { path = "../candle-vllm-core" }
candle-vllm-openai = { path = "../candle-vllm-openai" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { version = "0.12.24", features = ["json", "rustls-tls"] }
async-trait = "0.1.83"
thiserror = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
# rmcp = { workspace = true }
# rmcp-macros = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
candle-core = { workspace = true }

[features]
default = []
